samples/_failures_safe/1761447037_f95cc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de22e32d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_de22e32d.c:151:37: error: expected ‘;’ at end of input
  151 |             tokens[token_count].line
      |                                     ^
      |                                     ;
./samples/SAFE/__tmp_de22e32d.c:151:13: error: expected declaration or statement at end of input
  151 |             tokens[token_count].line
      |             ^~~~~~
./samples/SAFE/__tmp_de22e32d.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_de22e32d.c:151:13: error: expected declaration or statement at end of input
